static/scss/_facultyclusters.scss
// Faculty Cluster Parallax Lists ("pl")

.cluster-pl-title {
  background: url('../img/gold-dots-horizontal.png') center center repeat-x;
  display: block;
  font-size: 34px;
  margin-bottom: 50px;
  margin-top: 30px;

  @media (min-width: $screen-lg-min) {
    font-size: 36px;
  }

  @media (max-width: $screen-sm-max) {
    background-position: center bottom;
    font-size: 32px;
    margin-bottom: 40px;
  }

  span {
    background-color: #fff;
    display: inline-block;
    margin: 0 20px 0 0; // Force at least 20px of visible dotted line (in case title is multiline)
    padding: 0 20px 0 0;

    @media (max-width: $screen-sm-max) {
      background-color: transparent;
      margin: 0;
      padding: 0 0 15px;
    }
  }
}

.cluster-pl-cta {
  margin-bottom: 40px;
  margin-top: -40px;
}

.cluster-pl-sidebar-title {
  color: #787878;
  font-size: 18px;
  font-style: italic;
  font-weight: 600;
}

.cluster-pl-sidebar-list {
  @include list-unstyled;
  font-weight: 500;

  li {
    margin-bottom: 10px;
  }
}

.cluster-pl-desc,
.cluster-pl-sidebar-list {
  margin-bottom: 70px;
}

.cluster-short h3 a {
  color: #000;
  font-family: $font-family-sans-serif;
  font-size: 26px;
  font-weight: 600;
  line-height: 28px;
}

.cluster-short-desc {
  font-family: $font-family-sans-serif-alt;
  font-size: 13px;
  line-height: 18px;
}

.cluster-short-inline-list {
  font-family: $font-family-sans-serif-alt;
  font-size: 13px;
  line-height: 18px;
  padding: 10px 0 0 0;

  dt {
    font-weight: 500;
    display: inline;
  }

  dd {
    display: inline;
  }
}

.cluster-short-buttons-container {
  background: url('../img/gold-dots-horizontal.png') left top repeat-x;
  display: block;
  margin-bottom: 50px;

  .cluster-short-btn.btn {
    font-family: $font-family-sans-serif;
    font-size: 14px;
    font-weight: 500px;
    width: 140px;
    display: inline-block;
    padding: 9px 12px;
    margin: 20px 10px 0 0;
    text-align: left;
    text-transform: capitalize;
    border: 0;
  }
}

@media (max-width: 768px) {
  .cluster-short-buttons-container {
    text-align: center;

    .cluster-short-btn.btn {
      text-align: center;
      margin: 20px 10px 0 10px;
    }
  }
}

